# mcct

./: README.md  app.py  pyproject.toml  requirements.txt
.database/: init.sql
.github/workflows/: pre-merge.yml
ci/: ci.py
common/: file_helper.py  login_required.py  user.py
db/: connect.py  db.py  query.py
features/admin/: admin.py  query.py
features/admin/templates/: admin_base.html  admin_dashboard.html
features/staff/: query.py  staff.py
features/staff/templates/: staff_base.html  staff_dashboard.html
features/user/: query.py  user.py
features/user/static/css/: aboutus.css  home.css  news.css  user.css
features/user/templates/: user_aboutus.html  user_base.html  user_dashboard.html  user_home.html  user_news.html  user_projects.html
static/css/: app.css  body.css
templates/: base.html  index.html
